# ESP32

./: .gitignore  Arduino.code-workspace  CMakeLists.txt
BLE_CTL_LED/: platformio.ini
BLE_CTL_LED/src/: main.cpp
FS/: FS.ino  platformio.ini
FS/data/: kaylor.txt
LED/: LED.ino
LED/src/: LED.ino
MQTT/: platformio.ini
MQTT/src/: main.cpp
Sleep/: Sleep.ino
SoftAp/src/: SoftAp.ino
Station/: Station.ino  platformio.ini
WebConfig/: Readme.md  Readme.txt  WebConfig.ino  platformio.ini
WebConfig/data/: index.html
WebConfig/src/: main.cpp
hardware_info/: hardware_info.ino  platformio.ini
test/: other.cpp  other.h  test.ino
