cmake_minimum_required(VERSION 3.10)
project(test)

IF (WIN32)
    MESSAGE(STATUS "Now is windows")
    set(ESP32_SRC_PATH "C:/Users/Administrator/Documents/Arduino/hardware/espressif/esp32/")
ELSEIF (APPLE)
    MESSAGE(STATUS "Now is Apple systens.")
    set(ESP32_SRC_PATH "/Users/kaylor/Library/Arduino15/packages/esp32/hardware/esp32/1.0.1/")
ELSEIF (UNIX)
    MESSAGE(STATUS "Now is UNIX-like OS's. Including aPPLE os x  and CygWin")
ENDIF ()

set(CMAKE_CXX_STANDARD 14)
message("ESP32 PATH: " ${ESP32_SRC_PATH})
set(COMPONENT_ADD_INCLUDEDIRS
        variants/esp32/
        cores/esp32/
        libraries/ArduinoOTA/src
        libraries/AsyncUDP/src
        libraries/AzureIoT/src
        libraries/BLE/src
        libraries/BluetoothSerial/src
        libraries/DNSServer/src
        libraries/EEPROM/src
        libraries/ESP32/src
        libraries/ESPmDNS/src
        libraries/FFat/src
        libraries/FS/src
        libraries/HTTPClient/src
        libraries/HTTPUpdate/src
        libraries/NetBIOS/src
        libraries/Preferences/src
        libraries/SD_MMC/src
        libraries/SD/src
        libraries/SimpleBLE/src
        libraries/SPIFFS/src
        libraries/SPI/src
        libraries/Ticker/src
        libraries/Update/src
        libraries/WebServer/src
        libraries/WiFiClientSecure/src
        libraries/WiFi/src
        libraries/Wire/src
        )
set(SDK_INCLUDE_DIRECTORIES
        ./nghttp/nghttp2
        ./vfs/sys
        ./driver/driver
        ./lwip/posix/sys
        ./lwip/lwip/prot
        ./lwip/lwip/priv
        ./lwip/lwip/apps
        ./lwip/netif/ppp/polarssl
        ./lwip/netif/ppp
        ./lwip/apps/sntp
        ./lwip/posix
        ./lwip/ping
        ./lwip/lwip
        ./lwip/netif
        ./lwip/dhcpserver
        ./lwip/arpa
        ./lwip/netinet
        ./lwip/sys
        ./lwip/arch
        ./lwip/apps
        ./lwip/debug
        ./soc/soc
        ./protobuf-c/t/generated-code2
        ./protobuf-c/protobuf-c
        ./protobuf-c/t
        ./protobuf-c/protoc-c
        ./asio/asio/experimental/impl
        ./asio/asio/ssl/impl
        ./asio/asio/ssl/detail
        ./asio/asio/local/detail
        ./asio/asio/detail/impl
        ./asio/asio/generic/detail
        ./asio/asio/ip/impl
        ./asio/asio/ip/detail
        ./asio/asio/impl
        ./asio/asio/posix
        ./asio/asio/experimental
        ./asio/asio/ssl
        ./asio/asio/local
        ./asio/asio/detail
        ./asio/asio/generic
        ./asio/asio/windows
        ./asio/asio/ip
        ./asio/asio/ts
        ./asio/asio
        ./mbedtls/mbedtls
        ./newlib/xtensa/config
        ./newlib/xtensa
        ./newlib/net
        ./newlib/sys
        ./newlib/machine
        ./freertos/freertos
        ./ethernet/eth_phy
        ./esp32/xtensa/config
        ./esp32/xtensa
        ./esp32/hwcrypto
        ./esp32/esp32
        ./esp32/rom
        ./json/tests/unity/test/testdata
        ./json/tests/unity/test/expectdata
        ./json/tests/unity/examples/example_1/src
        ./json/tests/unity/examples/example_2/src
        ./json/tests/unity/examples/example_3/helper
        ./json/tests/unity/examples/example_3/src
        ./json/tests/unity/examples/example_1
        ./json/tests/unity/examples/example_2
        ./json/tests/unity/examples/example_3
        ./json/tests/unity/extras/fixture/test
        ./json/tests/unity/extras/fixture/src
        ./json/tests/unity/extras/fixture
        ./json/tests/unity/test
        ./json/tests/unity/examples
        ./json/tests/unity/src
        ./json/tests/unity/extras
        ./json/tests/unity
        ./json/tests
        ./wpa_supplicant/wpa2/eap_peer
        ./wpa_supplicant/wpa2/utils
        ./wpa_supplicant/wpa2/tls
        ./wpa_supplicant/wps/utils
        ./wpa_supplicant/crypto
        ./wpa_supplicant/wpa2
        ./wpa_supplicant/wps
        ./wpa_supplicant/wpa
        ./libsodium/sodium/private
        ./libsodium/sodium
        ./esp_ringbuf/freertos
        ./wifi_provisioning/wifi_provisioning
        ./ulp/esp32
        ./openssl/platform
        ./openssl/internal
        ./openssl/openssl
        ./coap/coap
        ./console/linenoise
        ./console/argtable3
        ./bootloader_support
        ./unity
        ./wear_levelling
        ./fatfs
        ./nghttp
        ./vfs
        ./fb_gfx
        ./smartconfig_ack
        ./spiffs
        ./config
        ./driver
        ./expat
        ./lwip
        ./soc
        ./esp_event
        ./protobuf-c
        ./freemodbus
        ./asio
        ./mbedtls
        ./newlib
        ./app_update
        ./esp_http_client
        ./freertos
        ./jsmn
        ./mdns
        ./ethernet
        ./esp_adc_cal
        ./tcp_transport
        ./esp32
        ./pthread
        ./esp_https_ota
        ./protocomm
        ./json
        ./heap
        ./sdmmc
        ./wpa_supplicant
        ./bt
        ./libsodium
        ./esp-face
        ./esp_ringbuf
        ./log
        ./wifi_provisioning
        ./idf_test
        ./tcpip_adapter
        ./xtensa-debug-module
        ./mqtt
        ./ulp
        ./spi_flash
        ./openssl
        ./esp_https_server
        ./esp32-camera
        ./esp-tls
        ./micro-ecc
        ./coap
        ./nvs_flash
        ./app_trace
        ./esp_http_server
        ./console)
foreach(var ${COMPONENT_ADD_INCLUDEDIRS})
#    message(${ESP32_SRC_PATH}${var})
    include_directories(${ESP32_SRC_PATH}${var})
endforeach()
foreach(var ${SDK_INCLUDE_DIRECTORIES})
    message(${ESP32_SRC_PATH}/tools/sdk/include/${var})
    include_directories(${ESP32_SRC_PATH}/tools/sdk/include/${var})
endforeach()
add_executable(test test.cpp)